# squint

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  heroku.yml
.github/: dependabot.yml
.github/workflows/: pr.yml  publish-docker-next.yml
scripts/docker/: build.sh  reset.sh
src/: badge.rs  main.rs  server.rs
src/graphics/: mod.rs  raster.rs  raster_test.rs  svg.rs  svg_test.rs  test_data.rs  text.rs  text_test.rs
visual_regression_testing/: compare.sh  package-lock.json  package.json  test_cases.json
