[package]
name = "squint"
version = "0.1.0"
authors = ["Shields.io Developers <team@shields.io> and contributors"]
edition = "2018"
publish = false
license = "Apache-2.0 or MIT"

[dependencies]
cairo-rs = { version = "0.14.7", features = ["png"] }
cfg-if = "1.0.0"
gio = { version = "0.14.6", features = ["v2_50"] }
glib = { version = "0.14.5", features = ["v2_50"] }
hyper = "0.13.7"
lazy_static = "1.4.0"
librsvg = { git = "https://gitlab.gnome.org/GNOME/librsvg", version = "2.52.1" }
quick-xml = "0.22.0"
reqwest = { version = "0.11.4", features = ["default-tls"] }
tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }
url = "2.2.2"

[dev-dependencies]
mockall = "0.10.2"
