[package]
name = "squint"
version = "0.1.0"
authors = ["Shields.io Developers <team@shields.io> and contributors"]
edition = "2018"
publish = false
license = "Apache-2.0 or MIT"

[dependencies]
cairo-rs = { version = "0.14.9", features = ["png"] }
cfg-if = "1.0.0"
gio = { version = "0.14.8", features = ["v2_50"] }
glib = { version = "0.14.8", features = ["v2_50"] }
hyper = { version = "0.14.15", features = ["http2", "server"] }
lazy_static = "1.4.0"
librsvg = { git = "https://gitlab.gnome.org/GNOME/librsvg", version = "2.52.1" }
quick-xml = "0.22.0"
reqwest = { version = "0.11.6", features = ["default-tls"] }
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }
url = "2.2.2"

[dev-dependencies]
mockall = "0.10.2"
